3D Image Transition (mouse wheel)

--- a/index.html
+++ b/index.html
@@ -11,9 +11,11 @@
             padding: 0;
         }
     </style>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
 </head>
 
 <body>
+    <canvas id="canvas"></canvas>
     <script type="module" src="./app.js"></script>
 </body>
 
